# ai-invention-6d0f06-curvature-discrepancy-for-citation-manip

./: README.md
chat/messages/: README.md
chat/messages/3_report_results/: 3_gen_full_paper.md
chat/prompts/: README.md
chat/prompts/3_report_results/: 3_gen_full_paper.md
paper_latex/: paper.tex  references.bib
paper_latex/workspace/: .sdk_openhands_agent_struct_out.json  convert_pdf_to_images.py  fetch_bibtex.py  fetch_refs.json  paper.aux  paper.bbl  paper.blg  paper.out
prompts/: README.md
prompts/1_create_idea/round_1/: 1_gen_hypo.md  2_review_hypo.md
prompts/2_test_idea/round_1/: 1_gen_strat.md  4_gen_paper_text.md  5_review_paper.md  6_upd_hypo.md
prompts/2_test_idea/round_2/: 1_gen_strat.md  4_gen_paper_text.md  5_review_paper.md  6_upd_hypo.md
prompts/3_report_results/: 3_gen_full_paper.md
prompts/3_report_results/1_gen_viz/: gen_viz_1.md  gen_viz_2.md  gen_viz_3.md  gen_viz_4.md
prompts/3_report_results/2_gen_demo_art/: gen_demo_art_dataset_1.md  gen_demo_art_experiment_1.md
round-1/dataset-1/: README.md
round-1/dataset-1/src/: .aii_cost_ledger.jsonl  .sdk_openhands_agent_struct_out.json  create_mini_preview.py  data.py  data_out.json  download_citation_networks.py  download_citation_pyg.py  preview_data_out.json  preview_examples.json  pyproject.toml
round-1/research-1/: README.md
round-1/research-2/: README.md
round-2/experiment-1/: README.md
round-2/experiment-1/src/: .sdk_openhands_agent_struct_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-2/research-1/: README.md
(+78 files in other folders)
