[project]
name = "citation-network-dataset"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "torch==2.13.0+cpu",
    "torch-geometric==2.8.0",
    "loguru==0.7.3",
    "requests==2.34.2",
    "numpy>=1.0",
    "networkx>=2.5"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
