[project]
name = "curvature-discrepancy-experiment"
version = "0.1.0"
description = "Curvature discrepancy method for citation manipulation detection"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.5.1",
    "pandas==3.0.3",
    "scipy==1.18.0",
    "networkx>=2.0",
    "scikit-learn==1.9.0",
    "matplotlib>=3.11.0",
    "seaborn>=0.13.0",
    "loguru>=0.7.0",
    "tqdm>=4.0.0",
]
